[tool.poetry]
name = "radiance"
version = "0.1.0"
description = ""
authors = ["Medvedev R.E. <roman@mellettan.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
django-debug-toolbar = "^4.4.6"
pika = "^1.3.2"
dramatiq = "^1.17.0"
django-dramatiq = "^0.11.6"
channels = "^4.1.0"
channels-rabbitmq = "^4.0.1"
daphne = "^4.1.2"
loguru = "^0.7.2"
sentry-sdk = "^2.13.0"
dj-database-url = "^2.2.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
python-crontab = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
